# docdb

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  library.cmake  replicator.h  version.h
src/docdb/: CMakeLists.txt  aggregate.h  aggregate_rows.h  aggregated_functions.h  aggregator.h  aggregrator_source_concept.h  batch.h  binops.h  buffer.h  concepts.h  database.cpp  database.h  doc_index.h  doc_index_unique.h  doc_storage.h  doc_storage_concept.h  docid.h  exceptions.h  groupby.h  inc_aggr.h  incremental_aggregator.h  index.cpp  index.h  index_schema.h  index_view.h  indexer.h  iterator.h  join.h  json.h  key.cpp  key.h  keylock.h  keyvalue.h  kvtable.cpp  kvtable.h  leveldb_adapters.h  map.h  map_concept.h  nostorage.h  observer.h  (+25 more)
src/docdblib/: CMakeLists.txt  abstractview.cpp  abstractview.h  aggregator_view.cpp  aggregator_view.h  aggrview.cpp  aggrview.h  attachments.cpp  attachments.h  batch.cpp  batch.h  callback.h  changesiterator.cpp  changesiterator.h  classes.h  compile.cpp  db.cpp  db.h  dbconfig.h  doc_store.cpp  doc_store.h  doc_store_index.cpp  doc_store_index.h  doc_store_map.cpp  doc_store_map.h  docdb.cpp  docdb.h  dociterator.cpp  dociterator.h  document.h  emitfn.h  exception.cpp  exception.h  filedb.cpp  filedb.h  filterview.cpp  filterview.h  formats.h  hash.cpp  hash.h  (+31 more)
src/example/: .gitignore  CMakeLists.txt  CSVReader.h  example_load.cpp  load_table.cpp
src/exec/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  basics.cpp
src/old/: database.cpp  iterator.h  key.h  number.h  rdifc.h  snapshot.cpp  storage.cpp  storage.h  storage_index.cpp  storage_index.h  table.h  table_handle.h  types.h  value.h
src/test/: CMakeLists.txt  main.cpp  testClass.h
src/tests/: CMakeLists.txt  aggregation.cpp  auto_aggregator.cpp  basicrow.cpp  binop.cpp  buffer.cpp  check.h  compact.cpp  compile_test.cpp  incremental_aggregation.cpp  index.cpp  index_unique.cpp  index_unique_1.cpp  index_unique_hide.cpp  join.cpp  manage_db.cpp  map.cpp  memdb.h  nostorage.cpp  row.cpp  schema.cpp  storage.cpp  structured.cpp
src/tools/: CMakeLists.txt  ReadLine.cpp  ReadLine.h  manage_db.cpp  parse_line.h
